@startuml


class Tablero{

}

class Batalla{
    - int victoriaDefensor;
    - int victoriaAtacante;
    + obtenerPerdedorDeBatalla() : Pais;
    - determinarVictoriosoDeGuerra() : Pais;
    + obtenerVictorioso() : Pais;
}

class Continente{
    +paises: Pais
    +juagdor: Jugador
}

class Pais{
    +jugador: Jugador
}

class Dado{
    +obtenerNumeros(numeroDeTropas): list
}


Tablero *---> "5" Continente
Tablero ---> Batalla
Batalla-->Dado
Tablero ---> "..*" Pais




@enduml
